<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geo2Tag Checkin</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_add_channel_activity">Add channel</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_channels">Channels</string>
    <string name="title_activity_map">Map</string>
    <string name="channel_title">Channel</string>
    <string name="description_title">Description</string>
    <string name="url_title">Url</string>
    <string name="active_radius_title">Active radius</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="geo2tag_client">Geo2tag Client</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="title_authorization_dialog">Login</string>
    <string name="tag_name">Name</string>
    <string name="tag_description">Description</string>
    <string name="tag_url">Image URL</string>
    <string name="tag_coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <color name="bg_color">#ffffff</color>
</resources>
