<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/login" />
    <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password" android:password="true"/>
    <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/email" android:visibility="gone" android:focusable="false"
            android:focusableInTouchMode="false"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:id="@+id/registration" android:layout_gravity="center"
            android:focusable="false"/>
    <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
            <!--&lt;!&ndash;android:orientation="horizontal"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content" android:layout_gravity="center"&ndash;&gt;-->
            <!--&lt;!&ndash;android:minHeight="54dp" android:paddingLeft="2dp" android:paddingTop="4dp" android:paddingRight="2dp"&ndash;&gt;-->
            <!--&lt;!&ndash;android:measureWithLargestChild="true">&ndash;&gt;-->
        <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/cancel_button"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="fill_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/cancel"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_weight="0.5" android:padding="0dp" android:layout_gravity="left"/>&ndash;&gt;-->
        <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/signin_button"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="fill_parent"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/signin"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_weight="0.5" android:padding="0dp" android:layout_gravity="right"/>&ndash;&gt;-->
    <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
    <!--<LinearLayout android:id="@+id/buttonPanel"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="wrap_content"-->
                  <!--android:minHeight="54dip"-->
                  <!--android:orientation="vertical" >-->
        <!--<LinearLayout-->
                <!--style="?android:attr/buttonBarStyle"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:paddingTop="4dip"-->
                <!--android:paddingStart="2dip"-->
                <!--android:paddingEnd="2dip"-->
                <!--android:measureWithLargestChild="true">-->
            <!--<LinearLayout android:id="@+id/leftSpacer"-->
                          <!--android:layout_weight="0.25"-->
                          <!--android:layout_width="0dip"-->
                          <!--android:layout_height="wrap_content"-->
                          <!--android:orientation="horizontal"-->
                          <!--android:visibility="gone" />-->
            <!--<Button android:id="@+id/cancel_button"-->
                    <!--android:layout_width="0dip"-->
                    <!--android:layout_gravity="start"-->
                    <!--android:layout_weight="1"-->
                    <!--style="?android:attr/buttonBarButtonStyle"-->
                    <!--android:maxLines="2"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--<Button android:id="@+id/signin_button"-->
                    <!--android:layout_width="0dip"-->
                    <!--android:layout_gravity="end"-->
                    <!--android:layout_weight="1"-->
                    <!--style="?android:attr/buttonBarButtonStyle"-->
                    <!--android:maxLines="2"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--<LinearLayout android:id="@+id/rightSpacer"-->
                          <!--android:layout_width="0dip"-->
                          <!--android:layout_weight="0.25"-->
                          <!--android:layout_height="wrap_content"-->
                          <!--android:orientation="horizontal"-->
                          <!--android:visibility="gone" />-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->
</LinearLayout>